<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/crearrrr"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="321dp"
        android:layout_height="46dp"
        android:background="#A4AEDCCD"
        android:text="@string/buscar_receta"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="5dp"
        android:text="@string/buscar2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="184dp"
        android:layout_height="172dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="186dp"
        android:layout_height="153dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="184dp"
        android:layout_height="138dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="184dp"
        android:layout_height="127dp"
        android:contentDescription="@string/todo"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:text="frito" />
</LinearLayout>